[FIX] website_sale_comparison: bottom_bar minor CSS fixes
This commit fixes two issues related to the `website_sale_comparison`
bottom bar :

1) As the `bottom_bar` is using the `sticky-bottom` utility class, which
comes with the `$zindex-sticky` (1020), it was position above the
`floating_bar` element, which overriddes its `z-index` with a `z-3`
utility class. We could have set the `bottom_bar` `z-index` to `z-2` but
unfortunately, the pager component includes a `z-index: 3` on the active
entry, which would make it appear above the bottom bar. To fix this, we
set the `z-index` of the `bottom_bar` to `3` and increment the one of the
`floating_bar` to `4`.

2) As the `background-color` of the footer was changed in `19.0`, this
highlighted an issue with the shadow of the `bottom_bar` showing above
the footer. To fix this issue, we set a negative offset, ensuring it
only shows on the top side and not on the bottom one.

task-5076826

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -522,6 +522,7 @@
 
         #o_wsale_floating_bar {
             bottom: var(--_container-gap);
+            z-index: 4; // above the comparison bottom bar and pager
             max-width: calc(100vw - calc(var(--_container-gap) * 2));
             gap: map-get($spacers, 1) 0;
         }
