--- a/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
+++ b/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
@@ -94,6 +94,9 @@
 }
 
 .o_wsale_comparison_bottom_bar {
+
+    box-shadow: 0px -12px 32px rgba($black, .175);
+
     .btn[data-bs-toggle="collapse"] {
         .oi-chevron-up {
             transition: transform 0.2s ease-in-out;
